--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                   </a>
                 </li>
                 <li class="">
-                  <a class="" href="">
+                  <a class="" href="https://www.google.com/maps/place/PARLIAMENT/@39.7430722,64.4233839,18.91z/data=!4m10!1m2!2m1!1sgym!3m6!1s0x3f5006711d1eafe1:0x65eb7004b783eb1d!8m2!3d39.7432465!4d64.4243831!15sCgNneW2SAQNneW3gAQA!16s%2Fg%2F11ggrlbpfs?entry=ttu">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>PCVF+7QR, Навоий шоҳ кўчаси, Buxoro, Узбекистан</span>
                   </a>
                 </li>
               </ul>
