--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +998995070219</span>
+                    <span> +998995<br>070219</span>
                   </a>
                 </li>
                 <li class="">
@@ -55,7 +55,7 @@
                 <li class="">
                   <a class="" href="https://www.google.com/maps/place/PARLIAMENT/@39.7430722,64.4233839,18.91z/data=!4m10!1m2!2m1!1sgym!3m6!1s0x3f5006711d1eafe1:0x65eb7004b783eb1d!8m2!3d39.7432465!4d64.4243831!15sCgNneW2SAQNneW3gAQA!16s%2Fg%2F11ggrlbpfs?entry=ttu">
                     <img src="images/location.png" alt="" />
-                    <span>PCVF+7QR, Навоий шоҳ кўчаси, Buxoro, Узбекистан</span>
+                    <span>PCVF+7QR, Навоий шоҳ кўчаси,\nBuxoro, Узбекистан</span>
                   </a>
                 </li>
               </ul>
