--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
                     </h2>
                   </div>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipnisi ut aliquipiusmod tempor incididunt ut labore et
-                  </p>
+                    Ular faqat qandaydir katta ish va og'riq bilan bir vaqtda sodir bo'ladi. Men eng kichik tafsilotga kelsam, biron bir ishda mashq qilish katta mehnat va og'riq bilan bir vaqtda sodir bo'lmaydi. Eng mayda tafsilotga kelsak, hech kim biron bir ish bilan shug'ullanmasligi kerak, faqat ularning ba'zilari ish va ish kabi vaqtga to'g'ri keladi.</p>
                   <hr />
                   <a href="">
                     Read More
@@ -225,8 +224,8 @@
                     Our Classes Videos
                   </h2>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
-                    ostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore
+                    Ular faqat qandaydir katta ish va og'riq bilan bir vaqtda sodir bo'ladi. Eng mayda detallarga kelish uchun, kim n
+                     har qanday ishda osttrud mashqlari faqat tug'ruq va og'riq bilan bir vaqtda sodir bo'ladi
                   </p>
                 </div>
               </div>
@@ -335,7 +334,7 @@
               Latest Blog
             </h2>
             <p>
-              iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+              Ular faqat qandaydir katta ish va og'riq bilan bir vaqtda sodir bo'ladi. Eng mayda detallarga kelish uchun, kim n
             </p>
           </div>
         </div>
@@ -359,8 +358,7 @@
                     Boxer Joniya Daro
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  </p>
+                    Bemorga g'amxo'rlik qilish, bemorni kuzatib borish juda muhim, ammo bu juda ko'p ish va og'riqli vaqtda sodir bo'ladi. Eng mayda tafsilotga kelsak, hech kim biron bir ish bilan shug'ullanmasligi kerak, faqat ba'zilari</p>
                   <a href="">
                     Read More
                   </a>
@@ -387,8 +385,7 @@
                     Boxer Joniya Daro
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  </p>
+                   Bemorga g'amxo'rlik qilish, bemorni kuzatib borish juda muhim, ammo bu juda ko'p ish va og'riqli vaqtda sodir bo'ladi. Eng mayda tafsilotga kelsak, hech kim biron bir ish bilan shug'ullanmasligi kerak, faqat ba'zilari </p>
                   <a href="">
                     Read More
                   </a>
@@ -415,7 +412,7 @@
                 What Says Our students
               </h2>
               <p>
-                iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+                Ular faqat qandaydir katta ish va og'riq bilan bir vaqtda sodir bo'ladi. Eng mayda detallarga kelish uchun, kim n
               </p>
             </div>
             <div class="client_box-container">
@@ -431,8 +428,7 @@
                           Jone Moe
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
+                          O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsum-dan foydalanish nuqtasi O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsumdan foydalanish nuqtasi </p> <img src="images/quote.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -446,8 +442,7 @@
                           Lio Uji
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
+                          O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsum-dan foydalanish nuqtasi O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsumdan foydalanish nuqtasi </p> <img src="images/quote.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -461,8 +456,7 @@
                           Jone Moe
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
+                         O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsum-dan foydalanish nuqtasi O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsumdan foydalanish nuqtasi </p><img src="images/quote.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -476,8 +470,7 @@
                           Lio Uji
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
+                          O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsum-dan foydalanish nuqtasi O'quvchi sahifaning tartibini ko'rib chiqayotganda uning o'qilishi mumkin bo'lgan mazmuni bilan chalg'itishi uzoq vaqtdan beri tasdiqlangan haqiqatdir. Lorem Ipsumdan foydalanish nuqtasi </p><img src="images/quote.png" alt="" />
                       </div>
                     </div>
                   </div>
